# rustchain-community

./: .gitignore  .mailmap  AGENT_REINFORCEMENT_TRAINING.md  AI_AGENT_RUSTCHAIN_EXPERIENCE_REPORT.md  ART_FOUNDATION_STATUS.md  ART_IMPLEMENTATION_STRATEGY.md  AUTHORS.md  CLI_HELP_DOCUMENTATION_AUDIT.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLIANCE_ENFORCEMENT_ANALYSIS.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  ContextLite-Rustchain-Integration-Analysis-WhitePaper.md  DEVELOPERS.md  DEVELOPMENT_PROCESS.md  Dockerfile  FEATURE_COVERAGE_SUMMARY.md  FINAL_CLEANUP_VERIFICATION_REPORT.md  FINAL_LAUNCH_READINESS_REPORT.md  FRESH_COMPREHENSIVE_AUDIT_REPORT.md  GITHUB_ORGANIZATION_STRATEGY.md  LICENSE  PERFORMANCE_SUMMARY.md  PUNCH_AUTO_UPDATER_COMPLETE_DESIGN.md  README.md  RUSTCHAIN_CRITICAL_ISSUES_ANALYSIS.md  RUSTCHAIN_IMPLEMENTATION_ROADMAP.md  RUSTCHAIN_PRODUCTION_EXPERIENCE_WHITEPAPER.md  RUSTCHAIN_SHIMMY_INTEGRATION_MASTER_PLAN.md  RustChain.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SHIMMY_INTEGRATION_MASTER_PLAN.md  SHIMMY_PRODUCTION_READINESS_AUTOMATION_COMPLETE.md  SMT_VERIFICATION_PLAN.md  SNAKE_EATING_TAIL_STATUS.md  TARPAULIN_INTEGRATION_COMPLETE.md  (+59 more)
${shimmy_path}/src/: discovery.rs
.archive/: punch.yaml.old
.archive/development/: art_analysis.json  champion_7b_implementation.go  champion_7c_implementation.go  champion_8a_implementation.go  champion_8b_implementation.go  champion_knowledge_test.txt  (+47 more)
.claude/: settings.local.json
.github/: pull_request_template.md
.specify/: RUSTCHAIN_SPEC_AUDIT_MASTER_PLAN.md
benchmarks/: README.md  simple_benchmark.rs
compliance/: dod_fedramp_roadmap.md  dod_nist_controls_plan.md  gdpr_article_17_implementation.md  gdpr_article_25_design_guidelines.md  gdpr_article_6_checklist.md  gdpr_customer_value_prop.md  gdpr_internal_checklist.md  hipaa_compliance_framework.md  soc2_implementation_roadmap.md
crates/: Cargo.toml
demo/: GIF_SCRIPT.md  VIDEO_DEMO_SCRIPT.md  build_ai_tool.yaml  enterprise_ml_pipeline.py  enterprise_showcase_summary.md  gif_mission.yaml  lightning_demo.sh  lightning_demo_safe.sh  lightning_gif_demo.sh  performance_benchmark.ps1  simple_langchain_benchmark.py  test_enterprise_transpilation.rs
docs/: COMMIT_SIGNING.md  COMPLY_INTEGRATION_HANDOFF.md  COMPLY_SDK_INTEGRATION.md  DEPLOYMENT.md  MCP_SERVER_DOCUMENTATION.md  README.md  SPEC_AGENT_API.md  SPEC_CLI_SYSTEM.md  SPEC_COMPLIANCE_API.md  SPEC_MISSION_ENGINE.md  api-reference.md  cli-reference.md  installation.md  quickstart.md  troubleshooting.md  usage-guide.md
examples/: 07_multi_step_automation.yaml  08_security_validation_workflow.yaml  EXAMPLES_GUIDE.md  README.md  agent_demo.yaml  agent_reasoning.yaml  api_integration.yaml  basic_error_validation.rs  benchmark_suite.yaml  chain_demo.yaml  comprehensive_demo.yaml  comprehensive_step_validation.rs  cross_platform_validation.rs  data_processing.json  data_processing.yaml  documentation_validation.rs  error_handling_validation.rs  hello_world.json  hello_world.yaml  hello_world_fixed.yaml  llm_demo.yaml  performance_security_audit.rs  performance_test.yaml  safety_demo.json  security_workflow.yaml  shimmy_integration_demo.yaml  showcase_workflow.yaml  test_security_fixes.rs  test_step_validation.rs  tool_demo.yaml  working_demo.yaml  zero_tolerance_final_audit.rs
gif_demo/: GIF_RECORDING_SCRIPT.md  chat_with_shimmy.py  simple_demo.yaml
memory-monitoring/: README.md  analyze-memory-logs.ps1  gpu-memory-monitor.ps1  start-memory-monitoring.ps1  system-memory-monitor.ps1
missions/: PUNCH_AUTO_UPDATER_MISSIONS_README.md  RUSTCHAIN_HIGH_CAPACITY_EXPERIMENT_WHITEPAPER_DRAFT.md  coverage_mission_01_memory.yaml  coverage_mission_01_memory_fixed.yaml  coverage_mission_01_memory_v2.yaml  coverage_mission_01_memory_v3.yaml  coverage_mission_02_tools.yaml  coverage_mission_03_engine.yaml  dogfood_comprehensive_step_coverage.yaml  dogfood_error_handling_validation.yaml  dogfood_feature_gated_steps.yaml  dogfood_http_bridge_test.yaml  done && mv champion_6c_doc_testing.yaml CUsersmichareposrustchain-communitymissionsdone  test_coverage_ai_ml_operations.yaml  test_coverage_code_development.yaml  test_coverage_data_processing.yaml  test_coverage_database_operations.yaml  test_coverage_file_operations.yaml  test_coverage_git_operations.yaml  test_coverage_network_operations.yaml  test_coverage_system_operations.yaml  test_punch_auto_updater.sh  website_update.yaml
output/: binary_distribution_roadmap.md  binary_distribution_specification.md  security_patch_commands.sh  security_vulnerability_report.md
reports/: dod_cybersecurity_strategy.md  gdpr_compliance_strategy.md  hipaa_compliance_strategy.md
schemas/: config_format.json  llm_request.json  llm_response.json  mission_format.json
scripts/: accessibility-test.js  cross-build.sh  quick-release-check.sh  test-release-pipeline.sh  test-release.sh  test-the-tests.sh  validate-release-ready.sh  website-analyzer.js  website-cicd.bat  website-cicd.sh
specs/: llm_provider_interface.yaml  mission_engine.yaml  runtime_context.yaml
src/: agent.rs  build_dashboard.rs  chain.rs  concurrency.rs  discovery.rs  invariant_ppt.rs  lib.rs  lib_backup.rs  main.rs  main_pretty.rs  memory.rs  testing.rs
tests/: basic_step_validation.rs  minimal_step_validation.rs  regression_tests.rs  release_gate_invariants.proptest-regressions  release_gate_invariants.rs  test_suite.rs
transpiled_output/: enterprise_ml_pipeline_Jenkinsfile  enterprise_ml_pipeline_github_actions.yml  enterprise_ml_pipeline_kubernetes.yaml  enterprise_ml_pipeline_rustchain.yaml
wiki/: Architecture-Overview.md  Home.md  Installation-Guide.md  Security-and-Compliance.md
(+206 files in other folders)
