[workspace]
members = [
    "botany-db",
    "tauri-camera"
]

[workspace.dependencies]
# Shared dependencies across crates
tokio = { version = "1.40", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
